Update and rename freshstart.html to index.html

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       Fresh Start General Contracting Renovation, Remodeling & Outdoor Solutions
       in New Castle County
     </title>
-    <link rel="stylesheet" href="/floorstyles.css" />
+    <link rel="stylesheet" href="floorstyles.css" />
   </head>
   <nav>
     <picture>
       <source
-        srcset="/Images/logo-transparent-svg.svg"
+        srcset="logo-transparent-svg.svg"
         type="image/svg+xml"
         loading="lazy"
         width="100%"
@@ -24,7 +24,7 @@
         style="object-fit: cover"
       />
       <img
-        src="/Images/logo-transparent-svg.svg"
+        src="logo-transparent-svg.svg"
         alt="Roadside Assistance Services"
         loading="lazy"
         width="100%"
@@ -35,9 +35,9 @@
     </picture>
     <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button>
     <ul class="nav-links">
-      <li class="menu-links"><a href="/nicksroadservice.html">Home</a></li>
-      <li class="menu-links"><a href="/nickservices.html">Services</a></li>
-      <li class="menu-links"><a href="/nickaboutus.html">About Us</a></li>
+      <li class="menu-links"><a href="nicksroadservice.html">Home</a></li>
+      <li class="menu-links"><a href="nickservices.html">Services</a></li>
+      <li class="menu-links"><a href="nickaboutus.html">About Us</a></li>
     </ul>
   </nav>
   <body>
@@ -74,7 +74,7 @@
             <div class="item-card">
               <img
                 class="img-shadow img-rounded"
-                src="/Images/FreshStart/flooringbefore.jpeg"
+                src="FreshStart/flooringbefore.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -98,7 +98,7 @@
             <div class="item-card">
               <img
                 class="img-shadow img-rounded"
-                src="/Images/FreshStart/flooringbefore.jpeg"
+                src="FreshStart/flooringbefore.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -147,7 +147,7 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="/Images/FreshStart/flooringbefore.jpeg"
+                src="FreshStart/flooringbefore.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -160,7 +160,7 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="/Images/FreshStart/flooringafter.jpeg"
+                src="FreshStart/flooringafter.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -173,7 +173,7 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="/Images/FreshStart/flooring.jpeg"
+                src="FreshStart/flooring.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -186,7 +186,7 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="/Images/FreshStart/flooring.jpeg"
+                src="FreshStart/flooring.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -199,7 +199,7 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="/Images/FreshStart/flooring.jpeg"
+                src="FreshStart/flooring.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -212,7 +212,7 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="/Images/FreshStart/flooring.jpeg"
+                src="FreshStart/flooring.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -231,7 +231,7 @@
             <div class="vertical-img-wrapper">
               <img
                 class="img-rounded img-mobile"
-                src="/Images/FreshStart/deckbefore.jpeg"
+                src="FreshStart/deckbefore.jpeg"
                 alt="Painting Before/After"
                 loading="lazy"
                 width="550px"
@@ -239,7 +239,7 @@
               />
               <img
                 class="img-rounded img-mobile"
-                src="/Images/FreshStart/deckafter.jpeg"
+                src="FreshStart/deckafter.jpeg"
                 alt="Painting Before/After"
                 loading="lazy"
                 width="550px"
@@ -405,7 +405,7 @@
             </div>
             <img
               class="img-logo-wrapper"
-              src="/Images/FreshStart/freshstartlogo.png"
+              src="FreshStart/freshstartlogo.png"
               title="Painting After Picture"
               alt="Painting Before/After Picture"
               srcset=""
