--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       Fresh Start General Contracting Renovation, Remodeling & Outdoor Solutions
       in New Castle County
     </title>
-    <link rel="stylesheet" href="floorstyles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <nav>
     <picture>
