--- a/index.html
+++ b/index.html
@@ -15,13 +15,29 @@
   </head>
   <nav>
     <picture>
-   
+      <source
+        srcset="FreshStart/freshstartio.svg"
+        type="image/svg+xml"
+        loading="lazy"
+        width="150px"
+        height="100px"
+        style="object-fit: cover"
+      />
+      <img
+        src="FreshStart/freshstartio.svg"
+        alt="Roadside Assistance Services"
+        loading="lazy"
+        width="150px"
+        height="100px"
+        style="object-fit: cover"
+        class="cstm-logo"
+      />
     </picture>
     <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button>
     <ul class="nav-links">
-      <li class="menu-links"><a href="nicksroadservice.html">Home</a></li>
-      <li class="menu-links"><a href="nickservices.html">Services</a></li>
-      <li class="menu-links"><a href="nickaboutus.html">About Us</a></li>
+      <li class="menu-links"><a href="/nicksroadservice.html">Home</a></li>
+      <li class="menu-links"><a href="/nickservices.html">Services</a></li>
+      <li class="menu-links"><a href="/nickaboutus.html">About Us</a></li>
     </ul>
   </nav>
   <body>
@@ -58,7 +74,7 @@
             <div class="item-card">
               <img
                 class="img-shadow img-rounded"
-                src="FreshStart/flooringbefore.jpeg"
+                src="FreshStart/IMG_0955.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -131,7 +147,7 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="FreshStart/flooringbefore.jpeg"
+                src="FreshStart/vanity room.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -170,7 +186,7 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="FreshStart/flooring.jpeg"
+                src="FreshStart/greydeck.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -183,7 +199,7 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="FreshStart/flooring.jpeg"
+                src="FreshStart/door painting.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -211,7 +227,7 @@
       </section>
       <section id="sub-section">
         <div class="container">
-          <div class="flex-wrapper-center">
+          <div class="flex-wrapper-center flex-wrapper-mobile">
             <div class="vertical-img-wrapper">
               <img
                 class="img-rounded img-mobile"
@@ -223,7 +239,7 @@
               />
               <img
                 class="img-rounded img-mobile"
-                src="FreshStart/deckafter.jpeg"
+                src="/Images/FreshStart/deckafter.jpeg"
                 alt="Painting Before/After"
                 loading="lazy"
                 width="550px"
@@ -306,43 +322,11 @@
                   Free consultations and detailed estimates
                 </h4>
                 <li class="content-list">
-                  From interior painting to flooring, tile, and drywall repair,
-                  we offer complete home renovation services in New Castle
-                  County, Delaware. Your all-in-one solution for home
-                  improvement.
+                  Get started with a complimentary consultation for your
+                  painting or renovation project. Receive a transparent,
+                  no-obligation estimate tailored to your specific needs in New
+                  Castle County, DE.
                 </li>
-                <h4 class="content-header prm-color">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    width="24"
-                    height="24"
-                    color="currentColor"
-                    fill="none"
-                  >
-                    <path
-                      d="M6 12C5.13023 12.7386 1.94713 14.5658 2.00054 15.9012C2.01513 16.2661 2.3205 16.5714 2.93122 17.1822L3.90287 18.1538M12 18C11.2614 18.8698 9.43417 22.0529 8.09878 21.9995C7.73393 21.9849 7.42856 21.6795 6.81784 21.0688L5.84618 20.0971M3.90287 18.1538L6.29464 15.762M3.90287 18.1538L5.84618 20.0971M5.84618 20.0971L7.04207 18.9012"
-                      stroke="currentColor"
-                      stroke-width="1.5"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    ></path>
-                    <path
-                      d="M13.9389 18.481C13.6199 18.8243 13.4604 18.996 13.2454 18.9999C13.0304 19.0039 12.8585 18.8319 12.5146 18.4881L5.51186 11.4849C5.16804 11.1411 4.99612 10.9692 5.00007 10.7542C5.00401 10.5392 5.17563 10.3797 5.51887 10.0607C5.75113 9.84487 5.93925 9.69256 6.14283 9.56702C7.90764 8.47876 10.1485 9.5093 11.9332 8.49885C13.9897 7.33452 15.7947 5.18592 17.4986 3.25974C18.2273 2.43601 18.5916 2.02414 19.1056 2.00066C20.0323 1.95831 22.0415 3.97332 21.9993 4.89475C21.9758 5.40882 21.5638 5.77316 20.7398 6.50183C18.8135 8.20531 16.6647 10.01 15.5006 12.0664C14.4902 13.8513 15.5207 16.0922 14.4325 17.8571C14.307 18.0607 14.1547 18.2488 13.9389 18.481Z"
-                      stroke="currentColor"
-                      stroke-width="1.5"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    ></path>
-                  </svg>
-                  Comprehensive services for all your renovation needs.
-                </h4>
-                <li class="content-list">
-                  We're committed to your happiness. Our Riverview painting and
-                  renovation team ensures exceptional results and a smooth,
-                  stress-free customer experience from start to finish.
-                </li>
-
                 <h4 class="content-header prm-color">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -363,13 +347,13 @@
                       d="M6 12a1 1 0 0 0-1 1v1a2 2 0 0 0 2 2h2a1 1 0 0 1 1 1v2.9a2 2 0 1 0 4 0V17a1 1 0 0 1 1-1h2a2 2 0 0 0 2-2v-1a1 1 0 0 0-1-1"
                     />
                   </svg>
-                  Customer satisfaction is our top priority.
+                  Streamlined for Your Convenience
                 </h4>
                 <li class="content-list">
-                  Get started with a complimentary consultation for your
-                  painting or renovation project. Receive a transparent,
-                  no-obligation estimate tailored to your specific needs in New
-                  Castle County, DE.
+                  Minimize disruption with our streamlined process. We work
+                  around your schedule, maintain a clean worksite daily, and
+                  complete projects on time—so you can enjoy your transformed
+                  space without delay.
                 </li>
               </ul>
             </div>
@@ -404,7 +388,7 @@
               </summary>
               <div class="detail-wrapper">
                 <div class="detail-header-wrapper">
-                  <h5>Signs include:</h5>
+                  <h5 class="text-sm">Signs include:</h5>
                 </div>
                 <ul>
                   <li class="detail-text">Fading or dull colors</li>
@@ -425,10 +409,11 @@
               <div class="detail-wrapper">
                 <ul>
                   <li class="detail-text">
-                    Interior rooms: 1–3 days per room (includes prep/dry time)
+                    Interior rooms: 1–2 days per room (includes prep/dry time)
                   </li>
                   <li class="detail-text">
-                    Whole-house exterior: 3–7 days (weather-dependent)
+                    Whole-house exterior: Project-based timeline
+                    (weather-dependent)
                   </li>
                 </ul>
               </div>
@@ -442,17 +427,6 @@
                   New installs, repairs, or refinishing — we deliver clean,
                   paint-ready walls and ceilings. Ideal for renovations,
                   additions, and damage restoration.
-                </p>
-              </div>
-            </details>
-            <details class="accordion-details">
-              <summary class="accordion-summary text-uppercase">
-                Do I need to move my furniture?
-              </summary>
-              <div class="detail-wrapper">
-                <p class="detail-text">
-                  Move and cover all furniture (small items should be cleared) -
-                  Reinstall curtain rods/artwork - Leave your space broom-clean
                 </p>
               </div>
             </details>
@@ -472,5 +446,58 @@
       </section>
     </main>
   </body>
-  <script src="jross.js"></script>
+  <footer class="lgt-sec-bk-color">
+    <div class="flexbox-container-footer">
+      <div class="flexbox-center">
+        <div class="cstm-logo-wrapper">
+          <picture>
+            <source
+              srcset="FreshStart/freshstartio.svg"
+              type="image/svg+xml"
+              loading="lazy"
+              width="180px"
+              height="100px"
+              style="object-fit: cover"
+            />
+            <img
+              src="FreshStart/freshstartio.svg"
+              alt="Roadside Assistance Services"
+              loading="lazy"
+              width="180px"
+              height="100px"
+              style="object-fit: cover"
+              class="cstm-logo"
+            />
+          </picture>
+        </div>
+      </div>
+    </div>
+    <div class="flexbox-center social-wrapper mg-right-one">
+      <a href="https://www.facebook.com/" aria-label="Facebook">
+        <img
+          src="FreshStart/facebook-svgrepo-com.svg"
+          alt="Facebook Logo"
+          loading="lazy"
+          width="30px"
+          height="30px"
+          class="svg-logo"
+        />
+      </a>
+      <a
+        href="https://www.instagram.com/"
+        aria-label="Instagram"
+        target="_blank"
+      >
+        <img
+          src="FreshStart/instagram-svgrepo-com.svg"
+          alt="Instagram Logo"
+          loading="lazy"
+          width="20px"
+          height="30px"
+          class="svg-logo"
+        />
+      </a>
+    </div>
+  </footer>
+  <script src="index.js"></script>
 </html>
