--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="item-card">
               <img
                 class="img-shadow img-rounded"
-                src="FreshStart/IMG_0955.jpeg"
+                src="FreshStart/vanity room.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -98,7 +98,7 @@
             <div class="item-card">
               <img
                 class="img-shadow img-rounded"
-                src="FreshStart/flooringbefore.jpeg"
+                src="FreshStart/IMG_2888.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
