--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               />
               <img
                 class="img-rounded img-mobile"
-                src="/Images/FreshStart/deckafter.jpeg"
+                src="FreshStart/deckafter.jpeg"
                 alt="Painting Before/After"
                 loading="lazy"
                 width="550px"
