--- a/index.html
+++ b/index.html
@@ -4,15 +4,81 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Flooring & painting experts in Newark, DE. Fresh Start General Contracting delivers quality results for homes inside and out."
+      content="Local painting experts in New Castle County, DE. We offer quality interior & exterior house painting services in cities like Newark, Bear, and Wilmington. Get a free estimate!"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Fresh Start General Contracting Renovation, Remodeling & Outdoor Solutions
-      in New Castle County
-    </title>
+    <title>FreshStartIo</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="FreshStart/freshstartio.svg"
+    />
   </head>
+  <!-- Business Info Wrapper -->
+  <div class="business-info-bar">
+    <div class="business-info">
+      <div class="info-item">
+        <svg
+          class="info-icon"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+          />
+        </svg>
+        <span>Mon-Fri: 8AM-5PM | Sat: 9AM-2PM</span>
+      </div>
+
+      <div class="info-item">
+        <svg
+          class="info-icon"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
+          />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
+          />
+        </svg>
+        <span>New Castle, DE</span>
+      </div>
+    </div>
+
+    <div class="info-item">
+      <svg
+        class="info-icon"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
+        />
+      </svg>
+      <span>302- 723-4797 </span>
+    </div>
+  </div>
+  <!-- Business Info Wrapper -->
+
   <nav>
     <picture>
       <source
@@ -25,7 +91,7 @@
       />
       <img
         src="FreshStart/freshstartio.svg"
-        alt="Roadside Assistance Services"
+        alt="FreshStart Painting Services"
         loading="lazy"
         width="150px"
         height="100px"
@@ -33,11 +99,16 @@
         class="cstm-logo"
       />
     </picture>
-    <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button>
+    <button class="menu-toggle" aria-label="Toggle Menu" aria-expanded="false">
+      &#9776;
+    </button>
     <ul class="nav-links">
-      <li class="menu-links"><a href="/nicksroadservice.html">Home</a></li>
-      <li class="menu-links"><a href="/nickservices.html">Services</a></li>
-      <li class="menu-links"><a href="/nickaboutus.html">About Us</a></li>
+      <li class="menu-links"><a href="/">Home</a></li>
+      <li class="menu-links"><a href="/services">Services</a></li>
+      <li class="menu-links"><a href="/about">About Us</a></li>
+      <li class="menu-links">
+        <a href="/contact" class="cta-link">Free Estimate</a>
+      </li>
     </ul>
   </nav>
   <body>
@@ -79,6 +150,7 @@
                 srcset=""
                 width="350px"
                 height="250px"
+                loading="lazy"
               />
               <h3 class="info-title">Interior Renovation</h3>
               <ul>
@@ -103,6 +175,7 @@
                 srcset=""
                 width="350px"
                 height="250px"
+                loading="lazy"
               />
               <h3 class="info-title mt-2">Exterior Renovation</h3>
 
@@ -152,6 +225,7 @@
                 srcset=""
                 width="350px"
                 height="250px"
+                loading="lazy"
               />
               <div class="img-caption">
                 <span class="img-text">Flooring</span>
@@ -165,6 +239,7 @@
                 srcset=""
                 width="350px"
                 height="250px"
+                loading="lazy"
               />
               <div class="img-caption">
                 <span class="img-text">Flooring</span>
@@ -178,6 +253,7 @@
                 srcset=""
                 width="350px"
                 height="250px"
+                loading="lazy"
               />
               <div class="img-caption">
                 <span class="img-text">Flooring</span>
@@ -191,6 +267,7 @@
                 srcset=""
                 width="350px"
                 height="250px"
+                loading="lazy"
               />
               <div class="img-caption">
                 <span class="img-text">Flooring</span>
@@ -204,6 +281,7 @@
                 srcset=""
                 width="350px"
                 height="250px"
+                loading="lazy"
               />
               <div class="img-caption">
                 <span class="img-text">Flooring</span>
@@ -217,6 +295,7 @@
                 srcset=""
                 width="350px"
                 height="250px"
+                loading="lazy"
               />
               <div class="img-caption">
                 <span class="img-text">Flooring</span>
@@ -231,7 +310,7 @@
             <div class="vertical-img-wrapper">
               <img
                 class="img-rounded img-mobile"
-                src="FreshStart/deckbefore.jpeg"
+                src="/Images/FreshStart/deckbefore.jpeg"
                 alt="Painting Before/After"
                 loading="lazy"
                 width="550px"
@@ -362,10 +441,8 @@
       </section>
       <section id="service-section" class="bg-light">
         <div class="container">
-          <div class="header-wrapper">
-            <h5 class="text-large text-center prm-color">
-              FAQs for Painters in Delaware
-            </h5>
+          <div class="service-wrapper">
+            <h5 class="service-title">FAQs for Painters in Delaware</h5>
             <div class="faq-text">
               Before you paint, get informed! This FAQ addresses key concerns
               for homeowners and businesses seeking professional painting
@@ -379,6 +456,7 @@
               srcset=""
               width="450px"
               height="100px"
+              loading="lazy"
             />
           </div>
           <div class="accordion-wrapper">
@@ -446,13 +524,13 @@
       </section>
     </main>
   </body>
-  <footer class="lgt-sec-bk-color">
+  <footer id="main-footer">
     <div class="flexbox-container-footer">
       <div class="flexbox-center">
         <div class="cstm-logo-wrapper">
           <picture>
             <source
-              srcset="FreshStart/freshstartio.svg"
+              srcset="freshstartio.svg"
               type="image/svg+xml"
               loading="lazy"
               width="180px"
@@ -460,7 +538,7 @@
               style="object-fit: cover"
             />
             <img
-              src="FreshStart/freshstartio.svg"
+              src="freshstartio.svg"
               alt="Roadside Assistance Services"
               loading="lazy"
               width="180px"
@@ -471,32 +549,42 @@
           </picture>
         </div>
       </div>
+      <div class="footer-links">
+        <a href="/about">About Us</a>
+        <a href="/services">Services</a>
+        <a href="/contact">Contact</a>
+        <a href="/privacy">Privacy Policy</a>
+      </div>
+      <div class="flexbox-center social-wrapper mg-right-one">
+        <a href="https://www.facebook.com/" aria-label="Facebook">
+          <img
+            src="FreshStart/facebook-svgrepo-com.svg"
+            alt="Facebook Logo"
+            loading="lazy"
+            width="30px"
+            height="30px"
+            class="svg-logo"
+          />
+        </a>
+        <a
+          href="https://www.instagram.com/"
+          aria-label="Instagram"
+          target="_blank"
+        >
+          <img
+            src="FreshStart/instagram-svgrepo-com.svg"
+            alt="Instagram Logo"
+            loading="lazy"
+            width="20px"
+            height="30px"
+            class="svg-logo"
+          />
+        </a>
+      </div>
     </div>
-    <div class="flexbox-center social-wrapper mg-right-one">
-      <a href="https://www.facebook.com/" aria-label="Facebook">
-        <img
-          src="FreshStart/facebook-svgrepo-com.svg"
-          alt="Facebook Logo"
-          loading="lazy"
-          width="30px"
-          height="30px"
-          class="svg-logo"
-        />
-      </a>
-      <a
-        href="https://www.instagram.com/"
-        aria-label="Instagram"
-        target="_blank"
-      >
-        <img
-          src="FreshStart/instagram-svgrepo-com.svg"
-          alt="Instagram Logo"
-          loading="lazy"
-          width="20px"
-          height="30px"
-          class="svg-logo"
-        />
-      </a>
+    <!-- Copyright line -->
+    <div class="copyright">
+      &copy; <span id="year"></span> FreshStart. All rights reserved.
     </div>
   </footer>
   <script src="index.js"></script>
