--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <div class="vertical-img-wrapper">
               <img
                 class="img-rounded img-mobile"
-                src="/Images/FreshStart/deckbefore.jpeg"
+                src="FreshStart/deckbefore.jpeg"
                 alt="Painting Before/After"
                 loading="lazy"
                 width="550px"
@@ -530,7 +530,7 @@
         <div class="cstm-logo-wrapper">
           <picture>
             <source
-              srcset="freshstartio.svg"
+              srcset="FreshStart/freshstartio.svg"
               type="image/svg+xml"
               loading="lazy"
               width="180px"
@@ -538,7 +538,7 @@
               style="object-fit: cover"
             />
             <img
-              src="freshstartio.svg"
+              src="FreshStart/freshstartio.svg"
               alt="Roadside Assistance Services"
               loading="lazy"
               width="180px"
