--- a/about-us.html
+++ b/about-us.html
@@ -10,12 +10,12 @@
     <title>
       Fresh Start IO - New Castle County Painting, Decking, Tile, Drywall
     </title>
-    <link rel="stylesheet" href="/floorstyles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/Images/FreshStart/freshstartio.svg"
+      href="FreshStart/freshstartio.svg"
     />
   </head>
   <body>
@@ -77,7 +77,7 @@
             d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
           />
         </svg>
-        <span>302- 723-4797 </span>
+        <span>302-723-4797 </span>
       </div>
     </div>
     <!-- Business Info Wrapper -->
@@ -86,7 +86,7 @@
     <nav>
       <picture>
         <source
-          srcset="/Images/FreshStart/freshstartio.svg"
+          srcset="FreshStart/freshstartio.svg"
           type="image/svg+xml"
           loading="lazy"
           width="150px"
@@ -94,7 +94,7 @@
           style="object-fit: cover"
         />
         <img
-          src="/Images/FreshStart/freshstartio.svg"
+          src="FreshStart/freshstartio.svg"
           alt="FreshStart Painting Services"
           loading="lazy"
           width="150px"
@@ -113,11 +113,11 @@
       <ul class="nav-links">
         <li class="menu-links"><a href="freshstart.html">Home</a></li>
         <li class="menu-links">
-          <a href="freshstartservice.html">Services</a>
+          <a href="services.html">Services</a>
         </li>
-        <li class="menu-links"><a href="freshstartabout.html">About Us</a></li>
+        <li class="menu-links"><a href="about-us.html">About Us</a></li>
         <li class="menu-links">
-          <a href="freshstartservice.html" class="cta-link">Free Estimate</a>
+          <a href="tel:3027234797" class="cta-link">Free Estimate</a>
         </li>
       </ul>
     </nav>
@@ -130,7 +130,6 @@
         </div>
       </section>
       <section class="container about-section">
-        <!-- Using 'container' class for consistent layout -->
         <div class="sidebar-wrapper-center">
           <div class="content-column">
             <h1 class="text-center mb-4">About Us</h1>
@@ -216,7 +215,7 @@
                 <div class="info-item">
                   <span class="info-value">New Castle County, DE</span>
                 </div>
-                <a href="https://maps.google.com" class="contact-link"
+                <a href="https://maps.google.com" class="contact-link" target="_blank"
                   >Get Directions →</a
                 >
               </div>
@@ -236,9 +235,9 @@
                 <div class="info-item">
                   <span class="info-label">Email:</span>
                   <a
-                    href="mailto:hello@delvadigital.com"
+                    href="mailto:freshstartindooroutdoor@gmail.com"
                     class="info-value contact-link"
-                    >hello@delvadigital.com</a
+                    >freshstartindooroutdoor@gmail.com</a
                   >
                 </div>
               </div>
@@ -257,14 +256,13 @@
         </div>
       </section>
     </main>
-    <!-- Footer - Retained from freshstart.html -->
     <footer id="main-footer">
       <div class="flexbox-container-footer">
         <div class="flexbox-center">
           <div class="cstm-logo-wrapper">
             <picture>
               <source
-                srcset="/Images/FreshStart/freshstartio.svg"
+                srcset="FreshStart/freshstartio.svg"
                 type="image/svg+xml"
                 loading="lazy"
                 width="180px"
@@ -272,7 +270,7 @@
                 style="object-fit: cover"
               />
               <img
-                src="/Images/FreshStart/freshstartio.svg"
+                src="FreshStart/freshstartio.svg"
                 alt="FreshStart Painting Services"
                 loading="lazy"
                 width="180px"
@@ -286,15 +284,15 @@
 
         <!-- Recommended additional sections -->
         <div class="footer-links">
-          <a href="/about">About Us</a>
-          <a href="/services">Services</a>
-          <a href="/contact">Contact</a>
+          <a href="about-us.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="freshstart.html">Contact</a>
           <a href="/privacy">Privacy Policy</a>
         </div>
         <div class="flexbox-center social-wrapper mg-right-one">
           <a href="https://www.facebook.com/" aria-label="Facebook">
             <img
-              src="/Images/FreshStart/facebook-svgrepo-com.svg"
+              src="FreshStart/facebook-svgrepo-com.svg"
               alt="Facebook Logo"
               loading="lazy"
               width="30px"
@@ -308,7 +306,7 @@
             target="_blank"
           >
             <img
-              src="/Images/FreshStart/instagram-svgrepo-com.svg"
+              src="FreshStart/instagram-svgrepo-com.svg"
               alt="Instagram Logo"
               loading="lazy"
               width="20px"
