Update and rename freshstartservice.html to service.html

--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FreshStartIO | Professional Home Improvement Services</title>
-    <link rel="stylesheet" href="/floorstyles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -72,7 +72,7 @@
     <nav>
       <picture>
         <source
-          srcset="/Images/FreshStart/freshstartio.svg"
+          srcset="FreshStart/freshstartio.svg"
           type="image/svg+xml"
           loading="lazy"
           width="150px"
@@ -80,7 +80,7 @@
           style="object-fit: cover"
         />
         <img
-          src="/Images/FreshStart/freshstartio.svg"
+          src="FreshStart/freshstartio.svg"
           alt="FreshStart Painting Services"
           loading="lazy"
           width="150px"
@@ -97,13 +97,13 @@
         &#9776;
       </button>
       <ul class="nav-links">
-        <li class="menu-links"><a href="/freshstart.html">Home</a></li>
+        <li class="menu-links"><a href="freshstart.html">Home</a></li>
         <li class="menu-links">
-          <a href="freshstartservice.html">Services</a>
+          <a href="service.html">Services</a>
         </li>
-        <li class="menu-links"><a href="freshstartabout.html">About Us</a></li>
+        <li class="menu-links"><a href="about-us.html">About Us</a></li>
         <li class="menu-links">
-          <a href="/contact" class="cta-link">Free Estimate</a>
+          <a href="tel+3027234797 " class="cta-link">Free Estimate</a>
         </li>
       </ul>
     </nav>
@@ -127,7 +127,7 @@
         <div class="service-card">
           <div
             class="service-img"
-            style="background-image: url('/Images/FreshStart/IMG_1345.jpeg')"
+            style="background-image: url('FreshStart/IMG_1345.jpeg')"
           ></div>
           <div class="service-content">
             <h3>Painting Services</h3>
@@ -145,7 +145,7 @@
         <div class="service-card">
           <div
             class="service-img"
-            style="background-image: url('/Images/FreshStart/flooring.jpeg')"
+            style="background-image: url('FreshStart/flooring.jpeg')"
           ></div>
           <div class="service-content">
             <h3>Tile Installation</h3>
@@ -163,7 +163,7 @@
         <div class="service-card">
           <div
             class="service-img"
-            style="background-image: url('/Images/FreshStart/greydeck.jpeg')"
+            style="background-image: url('FreshStart/greydeck.jpeg')"
           ></div>
           <div class="service-content">
             <h3>Deck Services</h3>
@@ -182,7 +182,7 @@
           <div
             class="service-img"
             style="
-              background-image: url('/Images/FreshStart/IMG_0092\ \(1\).jpg');
+              background-image: url('FreshStart/IMG_0092\ \(1\).jpg');
             "
           ></div>
           <div class="service-content">
@@ -217,7 +217,7 @@
           <div class="cstm-logo-wrapper">
             <picture>
               <source
-                srcset="/Images/FreshStart/freshstartio.svg"
+                srcset="/FreshStart/freshstartio.svg"
                 type="image/svg+xml"
                 loading="lazy"
                 width="180px"
@@ -225,7 +225,7 @@
                 style="object-fit: cover"
               />
               <img
-                src="/Images/FreshStart/freshstartio.svg"
+                src="FreshStart/freshstartio.svg"
                 alt="Roadside Assistance Services"
                 loading="lazy"
                 width="180px"
@@ -237,14 +237,14 @@
           </div>
         </div>
         <div class="footer-links">
-          <a href="/about">About Us</a>
-          <a href="/services">Services</a>
-          <a href="/contact">Contact</a>
+          <a href="about">About Us</a>
+          <a href="services">Services</a>
+          <a href="freshstart.html">Contact</a>
         </div>
         <div class="flexbox-center social-wrapper mg-right-one">
           <a href="https://www.facebook.com/" aria-label="Facebook">
             <img
-              src="/Images/FreshStart/facebook-svgrepo-com.svg"
+              src="FreshStart/facebook-svgrepo-com.svg"
               alt="Facebook Logo"
               loading="lazy"
               width="30px"
@@ -258,7 +258,7 @@
             target="_blank"
           >
             <img
-              src="/Images/FreshStart/instagram-svgrepo-com.svg"
+              src="FreshStart/instagram-svgrepo-com.svg"
               alt="Instagram Logo"
               loading="lazy"
               width="20px"
@@ -273,5 +273,5 @@
       </div>
     </footer>
   </body>
-  <script src="/jross.js"></script>
+  <script src="/index.js"></script>
 </html>
