--- a/index.html
+++ b/index.html
@@ -16,24 +16,48 @@
       href="FreshStart/freshstartio.svg"
     />
   </head>
-  <!-- Business Info Wrapper -->
-  <div class="business-info-bar">
-    <div class="business-info">
-      <div class="info-item">
-        <svg
-          class="info-icon"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
-          />
-        </svg>
-        <span>Mon-Fri: 8AM-5PM | Sat: 9AM-2PM</span>
+  <header>
+    <div class="business-info-bar">
+      <div class="business-info">
+        <div class="info-item">
+          <svg
+            class="info-icon"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+            />
+          </svg>
+          <span>Mon-Fri: 8AM-4PM | Sat: 9AM-2PM</span>
+        </div>
+
+        <div class="info-item">
+          <svg
+            class="info-icon"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
+            />
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
+            />
+          </svg>
+          <span>New Castle, DE</span>
+        </div>
       </div>
 
       <div class="info-item">
@@ -47,38 +71,13 @@
             stroke-linecap="round"
             stroke-linejoin="round"
             stroke-width="2"
-            d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
-          />
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
+            d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
           />
         </svg>
-        <span>New Castle, DE</span>
+        <span>302- 723-4797 </span>
       </div>
     </div>
-
-    <div class="info-item">
-      <svg
-        class="info-icon"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
-        />
-      </svg>
-      <span>302- 723-4797 </span>
-    </div>
-  </div>
-  <!-- Business Info Wrapper -->
-
+  </header>
   <nav>
     <picture>
       <source
@@ -103,9 +102,9 @@
       &#9776;
     </button>
     <ul class="nav-links">
-      <li class="menu-links"><a href="/">Home</a></li>
-      <li class="menu-links"><a href="/services">Services</a></li>
-      <li class="menu-links"><a href="/about">About Us</a></li>
+      <li class="menu-links"><a href="index.html">Home</a></li>
+      <li class="menu-links"><a href="service.html">Services</a></li>
+      <li class="menu-links"><a href="about-us.html">About Us</a></li>
       <li class="menu-links">
         <a href="/contact" class="cta-link">Free Estimate</a>
       </li>
@@ -117,8 +116,7 @@
         <div class="hero-container">
           <div>
             <h1 class="hero-title white">
-              Quality Painting in <span class="prm-2-color">Delaware</span> That
-              Fits Your Budget
+              Quality Painting in Delaware That Fits Your Budget
             </h1>
             <p>
               Need a quick refresh? Our team delivers streak-free interior
@@ -146,52 +144,77 @@
               <img
                 class="img-shadow img-rounded"
                 src="FreshStart/vanity room.jpeg"
-                alt="Flooring Installation"
-                srcset=""
+                alt="Interior Renovation Services"
                 width="350px"
                 height="250px"
-                loading="lazy"
               />
-              <h3 class="info-title">Interior Renovation</h3>
-              <ul>
-                <li class="info-text">
-                  ✔ Wall & Ceiling Painting – Smooth, vibrant, and long-lasting
-                </li>
-                <li class="info-text">
-                  ✔ Trim & Cabinet Refinishing – Crisp lines and durable
-                  coatings
-                </li>
-                <li class="info-text">
-                  ✔ Color Matching – Perfect hues for your space
-                </li>
-              </ul>
-              <a href="#">Learn More ></a>
+              <div class="item-card-content">
+                <h3 class="info-title">Interior Renovation</h3>
+                <p class="service-description">
+                  Transform your living spaces with our comprehensive interior
+                  solutions:
+                </p>
+                <ul>
+                  <li class="info-text">
+                    <strong>Wall & Ceiling Painting:</strong> Professional
+                    application of premium paints for smooth, vibrant finishes
+                    that last
+                  </li>
+                  <li class="info-text">
+                    <strong>Trim & Cabinet Refinishing:</strong> Expert
+                    techniques for crisp lines and durable coatings that
+                    withstand daily use
+                  </li>
+                  <li class="info-text">
+                    <strong>Color Matching:</strong> Advanced tools to perfectly
+                    match existing colors or help you select new harmonious hues
+                  </li>
+                  <li class="info-text">
+                    <strong>Drywall Repair:</strong> Seamless fixes for dents,
+                    cracks, and water damage before painting
+                  </li>
+                </ul>
+                <a href="service.html"
+                  >Learn More About Interior Services →</a
+                >
+              </div>
             </div>
+
             <div class="item-card">
               <img
                 class="img-shadow img-rounded"
                 src="FreshStart/IMG_2888.jpeg"
-                alt="Flooring Installation"
-                srcset=""
+                alt="Exterior Renovation Services"
                 width="350px"
                 height="250px"
-                loading="lazy"
               />
-              <h3 class="info-title mt-2">Exterior Renovation</h3>
-
-              <ul>
-                <li class="info-text">
-                  ✔ House Painting - Premium coatings for siding, brick & stucco
-                </li>
-                <li class="info-text">
-                  ✔ Deck & Fence Staining - Revive outdoor spaces with lasting
-                  protection
-                </li>
-                <li class="info-text">
-                  ✔ Power Washing - Restore surfaces to like-new condition
-                </li>
-              </ul>
-              <a href="#">Learn More ></a>
+              <div class="item-card-content">
+                <h3 class="info-title">Exterior Renovation</h3>
+                <p class="service-description">
+                  Protect and beautify your home's exterior with our specialized
+                  services:
+                </p>
+                <ul>
+                  <li class="info-text">
+                    <strong>House Painting:</strong> Premium coatings
+                    specifically formulated for siding, brick, and stucco
+                    surfaces
+                  </li>
+                  <li class="info-text">
+                    <strong>Deck & Fence Staining:</strong> Weather-resistant
+                    treatments that revive and protect outdoor wood surfaces
+                  </li>
+                  <li class="info-text">
+                    <strong>Power Washing:</strong> Deep cleaning to remove
+                    dirt, mildew, and old paint for optimal surface preparation
+                  </li>
+                  <li class="info-text">
+                    <strong>Surface Preparation:</strong> Proper scraping,
+                    sanding, and priming to ensure paint adhesion and longevity
+                  </li>
+                </ul>
+                <a href="freshstartservice.html">Explore Exterior Services →</a>
+              </div>
             </div>
           </div>
           <div class="btn-wrapper flex-center">
@@ -220,58 +243,42 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="FreshStart/vanity room.jpeg"
+                src="FreshStart/IMG_3087.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
                 height="250px"
-                loading="lazy"
               />
-              <div class="img-caption">
-                <span class="img-text">Flooring</span>
-              </div>
             </div>
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="FreshStart/flooringafter.jpeg"
+                src="FreshStart/IMG_2711.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
                 height="250px"
-                loading="lazy"
               />
-              <div class="img-caption">
-                <span class="img-text">Flooring</span>
-              </div>
             </div>
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="FreshStart/flooring.jpeg"
+                src="FreshStart/IMG_0481.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
                 height="250px"
-                loading="lazy"
               />
-              <div class="img-caption">
-                <span class="img-text">Flooring</span>
-              </div>
             </div>
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="FreshStart/greydeck.jpeg"
+                src="FreshStart/IMG_4461 (1).jpg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
                 height="250px"
-                loading="lazy"
               />
-              <div class="img-caption">
-                <span class="img-text">Flooring</span>
-              </div>
             </div>
             <div class="img-cover card-wrapper">
               <img
@@ -281,25 +288,17 @@
                 srcset=""
                 width="350px"
                 height="250px"
-                loading="lazy"
               />
-              <div class="img-caption">
-                <span class="img-text">Flooring</span>
-              </div>
             </div>
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="FreshStart/flooring.jpeg"
+                src="FreshStart/paintingafter.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
                 height="250px"
-                loading="lazy"
               />
-              <div class="img-caption">
-                <span class="img-text">Flooring</span>
-              </div>
             </div>
           </div>
         </div>
@@ -325,7 +324,6 @@
                 height="350px"
               />
             </div>
-
             <div class="content-box prm-color">
               <h3 class="mb-4 text-large">Why Choose Fresh Start IO?</h3>
               <ul>
@@ -439,6 +437,18 @@
           </div>
         </div>
       </section>
+      <section class="cta-section">
+        <div class="container">
+          <h2>Ready to Transform Your Space?</h2>
+          <p class="mb-6">
+            Contact us today for a free estimate on your home improvement
+            project.
+          </p>
+          <a href="freshstartabout.html" class="primary-btn"
+            >Get Your Free Estimate</a
+          >
+        </div>
+      </section>
       <section id="service-section" class="bg-light">
         <div class="container">
           <div class="service-wrapper">
@@ -448,16 +458,6 @@
               for homeowners and businesses seeking professional painting
               services in Delaware.
             </div>
-            <img
-              class="img-logo-wrapper"
-              src="FreshStart/freshstartlogo.png"
-              title="Painting After Picture"
-              alt="Painting Before/After Picture"
-              srcset=""
-              width="450px"
-              height="100px"
-              loading="lazy"
-            />
           </div>
           <div class="accordion-wrapper">
             <details class="accordion-details">
@@ -553,7 +553,6 @@
         <a href="/about">About Us</a>
         <a href="/services">Services</a>
         <a href="/contact">Contact</a>
-        <a href="/privacy">Privacy Policy</a>
       </div>
       <div class="flexbox-center social-wrapper mg-right-one">
         <a href="https://www.facebook.com/" aria-label="Facebook">
@@ -582,10 +581,10 @@
         </a>
       </div>
     </div>
-    <!-- Copyright line -->
     <div class="copyright">
       &copy; <span id="year"></span> FreshStart. All rights reserved.
     </div>
   </footer>
   <script src="index.js"></script>
 </html>
+
