--- a/about-us.html
+++ b/about-us.html
@@ -318,6 +318,6 @@
         &copy; <span id="year"></span> FreshStart. All rights reserved.
       </div>
     </footer>
-    <script src="/jross.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
