--- a/about-us.html
+++ b/about-us.html
@@ -108,7 +108,7 @@
         &#9776;
       </button>
       <ul class="nav-links">
-        <li class="menu-links"><a href="freshstart.html">Home</a></li>
+        <li class="menu-links"><a href="index.html">Home</a></li>
         <li class="menu-links">
           <a href="services.html">Services</a>
         </li>
