--- a/about-us.html
+++ b/about-us.html
@@ -110,7 +110,7 @@
       <ul class="nav-links">
         <li class="menu-links"><a href="index.html">Home</a></li>
         <li class="menu-links">
-          <a href="services.html">Services</a>
+          <a href="service.html">Services</a>
         </li>
         <li class="menu-links"><a href="about-us.html">About Us</a></li>
         <li class="menu-links">
