--- a/service.html
+++ b/service.html
@@ -217,7 +217,7 @@
           <div class="cstm-logo-wrapper">
             <picture>
               <source
-                srcset="/FreshStart/freshstartio.svg"
+                srcset="FreshStart/freshstartio.svg"
                 type="image/svg+xml"
                 loading="lazy"
                 width="180px"
