--- a/service.html
+++ b/service.html
@@ -99,7 +99,7 @@
       <ul class="nav-links">
         <li class="menu-links"><a href="freshstart.html">Home</a></li>
         <li class="menu-links">
-          <a href="service.html">Services</a>
+          <a href="services.html">Services</a>
         </li>
         <li class="menu-links"><a href="about-us.html">About Us</a></li>
         <li class="menu-links">
