--- a/service.html
+++ b/service.html
@@ -97,9 +97,9 @@
         &#9776;
       </button>
       <ul class="nav-links">
-        <li class="menu-links"><a href="freshstart.html">Home</a></li>
+        <li class="menu-links"><a href="index.html">Home</a></li>
         <li class="menu-links">
-          <a href="services.html">Services</a>
+          <a href="service.html">Services</a>
         </li>
         <li class="menu-links"><a href="about-us.html">About Us</a></li>
         <li class="menu-links">
