--- a/about-us.html
+++ b/about-us.html
@@ -282,8 +282,8 @@
         <!-- Recommended additional sections -->
         <div class="footer-links">
           <a href="about-us.html">About Us</a>
-          <a href="services.html">Services</a>
-          <a href="freshstart.html">Contact</a>
+          <a href="service.html">Services</a>
+          <a href="about-us.html">Contact</a>
           <a href="/privacy">Privacy Policy</a>
         </div>
         <div class="flexbox-center social-wrapper mg-right-one">
