--- a/service.html
+++ b/service.html
@@ -47,7 +47,7 @@
                 d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
               />
             </svg>
-            <span>New Castle, DE</span>
+            <span>New Castle County, DE</span>
           </div>
         </div>
 
@@ -237,9 +237,9 @@
           </div>
         </div>
         <div class="footer-links">
-          <a href="about">About Us</a>
-          <a href="services">Services</a>
-          <a href="freshstart.html">Contact</a>
+          <a href="about-us.html">About Us</a>
+          <a href="service.html">Services</a>
+          <a href="index.html">Contact</a>
         </div>
         <div class="flexbox-center social-wrapper mg-right-one">
           <a href="https://www.facebook.com/" aria-label="Facebook">
