--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
             />
           </svg>
-          <span>New Castle, DE</span>
+          <span>New Castle County, DE</span>
         </div>
       </div>
 
@@ -74,7 +74,7 @@
             d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
           />
         </svg>
-        <span>302- 723-4797 </span>
+        <span>302-723-4797 </span>
       </div>
     </div>
   </header>
@@ -106,7 +106,7 @@
       <li class="menu-links"><a href="service.html">Services</a></li>
       <li class="menu-links"><a href="about-us.html">About Us</a></li>
       <li class="menu-links">
-        <a href="/contact" class="cta-link">Free Estimate</a>
+        <a href="" class="cta-link">Free Estimate</a>
       </li>
     </ul>
   </nav>
@@ -550,9 +550,9 @@
         </div>
       </div>
       <div class="footer-links">
-        <a href="/about">About Us</a>
-        <a href="/services">Services</a>
-        <a href="/contact">Contact</a>
+        <a href="about-us.html">About Us</a>
+        <a href="service.html">Services</a>
+        <a href="about-us.html">Contact</a>
       </div>
       <div class="flexbox-center social-wrapper mg-right-one">
         <a href="https://www.facebook.com/" aria-label="Facebook">
