--- a/about-us.html
+++ b/about-us.html
@@ -59,7 +59,7 @@
               d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
             />
           </svg>
-          <span>New Castle, DE</span>
+          <span>New Castle County, DE</span>
         </div>
       </div>
 
@@ -108,7 +108,8 @@
         &#9776;
       </button>
       <ul class="nav-links">
-        <li class="menu-links"><a href="index.html">Home</a></li>
+        <li class="menu-links"><a href="index.html">Home</a>
+        </li>
         <li class="menu-links">
           <a href="service.html">Services</a>
         </li>
@@ -131,7 +132,7 @@
           <div class="content-column">
             <h1 class="text-center mb-4">About Us</h1>
             <p>
-              Welcome to <a href="/freshstart.html/">FreshStartI0</a>, a
+              Welcome to <a href="/index.html/">FreshStartI0</a>, a
               distinguished, locally-owned and operated painting and home
               improvement firm in New Castle County, Delaware. Our primary
               objective is to assist both residential and commercial property
@@ -150,7 +151,7 @@
               consistent quality.
             </p>
             <p>
-              At <a href="/freshstart.html/">FreshStartIO</a> we recognize that
+              At <a href="/index.html/">FreshStartIO</a> we recognize that
               home improvement initiatives represent significant investments.
               Consequently, we prioritize transparent communication, streamlined
               processes, and individualized client service from consultation
@@ -232,9 +233,9 @@
                 <div class="info-item">
                   <span class="info-label">Email:</span>
                   <a
-                    href="mailto:freshstartindooroutdoor@gmail.com"
+                    href="mailto:support@freshstartio.com"
                     class="info-value contact-link"
-                    >freshstartindooroutdoor@gmail.com</a
+                    >support@freshstartio.com</a
                   >
                 </div>
               </div>
@@ -249,7 +250,7 @@
             Contact us today for a free estimate on your home improvement
             project.
           </p>
-          <a href="freshstartabout.html" class="primary-btn">Get Your Free Estimate</a>
+          <a href="about-us.html" class="primary-btn">Get Your Free Estimate</a>
         </div>
       </section>
     </main>
@@ -284,7 +285,6 @@
           <a href="about-us.html">About Us</a>
           <a href="service.html">Services</a>
           <a href="about-us.html">Contact</a>
-          <a href="/privacy">Privacy Policy</a>
         </div>
         <div class="flexbox-center social-wrapper mg-right-one">
           <a href="https://www.facebook.com/" aria-label="Facebook">
