--- a/service.html
+++ b/service.html
@@ -206,7 +206,7 @@
         <p class="mb-6">
           Contact us today for a free estimate on your home improvement project.
         </p>
-        <a href="freshstartabout.html" class="primary-btn"
+        <a href="about-us.html" class="primary-btn"
           >Get Your Free Estimate</a
         >
       </div>
