--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             Contact us today for a free estimate on your home improvement
             project.
           </p>
-          <a href="freshstartabout.html" class="primary-btn"
+          <a href="tel:+3027234797" class="primary-btn"
             >Get Your Free Estimate</a
           >
         </div>
