--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     sanding, and priming to ensure paint adhesion and longevity
                   </li>
                 </ul>
-                <a href="freshstartservice.html">Explore Exterior Services →</a>
+                <a href="service.html">Explore Exterior Services →</a>
               </div>
             </div>
           </div>
