--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <li class="menu-links"><a href="service.html">Services</a></li>
       <li class="menu-links"><a href="about-us.html">About Us</a></li>
       <li class="menu-links">
-        <a href="" class="cta-link">Free Estimate</a>
+        <a href="tel:+3027234797" class="cta-link">Free Estimate</a>
       </li>
     </ul>
   </nav>
@@ -129,6 +129,7 @@
           </div>
         </div>
       </section>
+
       <section id="service-information">
         <div class="container">
           <div class="service-text">
@@ -179,7 +180,6 @@
                 >
               </div>
             </div>
-
             <div class="item-card">
               <img
                 class="img-shadow img-rounded"
@@ -293,7 +293,7 @@
             <div class="img-cover card-wrapper">
               <img
                 class="img-shadow"
-                src="FreshStart/paintingafter.jpeg"
+                src="Images/FreshStart/paintingafter.jpeg"
                 alt="Flooring Installation"
                 srcset=""
                 width="350px"
@@ -324,9 +324,11 @@
                 height="350px"
               />
             </div>
-            <div class="content-box prm-color">
-              <h3 class="mb-4 text-large">Why Choose Fresh Start IO?</h3>
-              <ul>
+            <div class="content-box">
+              <h3 class="mb-4 text-large prm-color">
+                Why Choose Fresh Start IO?
+              </h3>
+              <div class="flexbox-start">
                 <h4 class="content-header prm-color">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -367,11 +369,15 @@
                   </svg>
                   Experienced Professionals
                 </h4>
+              </div>
+              <ul>
                 <li class="content-list">
                   Expert Delaware painters and renovators. Our skilled
                   professionals deliver top-quality craftsmanship and flawless
                   finishes for every project.
                 </li>
+              </ul>
+              <div class="flexbox-start">
                 <h4 class="content-header prm-color">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -398,12 +404,17 @@
                   </svg>
                   Free consultations and detailed estimates
                 </h4>
+              </div>
+
+              <ul>
                 <li class="content-list">
                   Get started with a complimentary consultation for your
                   painting or renovation project. Receive a transparent,
                   no-obligation estimate tailored to your specific needs in New
                   Castle County, DE.
                 </li>
+              </ul>
+              <div class="flexbox-start">
                 <h4 class="content-header prm-color">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -426,6 +437,9 @@
                   </svg>
                   Streamlined for Your Convenience
                 </h4>
+              </div>
+
+              <ul>
                 <li class="content-list">
                   Minimize disruption with our streamlined process. We work
                   around your schedule, maintain a clean worksite daily, and
@@ -437,14 +451,14 @@
           </div>
         </div>
       </section>
-      <section class="cta-section">
+      <section class="cta-section bg-section">
         <div class="container">
-          <h2>Ready to Transform Your Space?</h2>
-          <p class="mb-6">
+          <h4>Ready to Transform Your Space?</h4>
+          <p class="mb-6 white">
             Contact us today for a free estimate on your home improvement
             project.
           </p>
-          <a href="tel:+3027234797" class="primary-btn"
+          <a href="mailto:support@freshstartio.com" class="primary-btn"
             >Get Your Free Estimate</a
           >
         </div>
@@ -514,8 +528,30 @@
               </summary>
               <div class="detail-wrapper">
                 <p class="detail-text">
-                  We work with premium brands like: - Sherwin-Williams -
-                  Benjamin Moore - Behr
+                  We work with premium brands like: -
+                  <a
+                    href="https://www.sherwin-williams.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="prm-color"
+                    >Sherwin-Williams</a
+                  >
+                  -
+                  <a
+                    href="https://www.benjaminmoore.com/en-us"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="prm-color"
+                    >Benjamin Moore</a
+                  >
+                  -
+                  <a
+                    href="https://www.behr.com/consumer"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="prm-color"
+                    >Behr</a
+                  >
                 </p>
               </div>
             </details>
@@ -552,7 +588,7 @@
       <div class="footer-links">
         <a href="about-us.html">About Us</a>
         <a href="service.html">Services</a>
-        <a href="about-us.html">Contact</a>
+        <a href="href="tel:+3027234797"">Contact</a>
       </div>
       <div class="flexbox-center social-wrapper mg-right-one">
         <a href="https://www.facebook.com/" aria-label="Facebook">
@@ -566,7 +602,7 @@
           />
         </a>
         <a
-          href="https://www.instagram.com/"
+          href="https://www.instagram.com/freshstartio/"
           aria-label="Instagram"
           target="_blank"
         >
