--- a/about-us.html
+++ b/about-us.html
@@ -130,7 +130,7 @@
       <section class="container about-section">
         <div class="sidebar-wrapper-center">
           <div class="content-column">
-            <h1 class="text-center mb-4">About Us</h1>
+            <h1 class="text-center mb-4 white">About Us</h1>
             <p>
               Welcome to <a href="/index.html/">FreshStartI0</a>, a
               distinguished, locally-owned and operated painting and home
